hello world finish

--- a/code-along/index.html
+++ b/code-along/index.html
@@ -12,6 +12,6 @@
 
         <p>Go to our <a href="products.html">Ingredients Page</a></p>
 
-        <p>Check out our <a href="http://pizzahut.com">menu</a> for pizza</p>
+        <p>Check out my <a href="http://pizzahut.com">menu</a> for pizza</p>
 </body>
 </html>
