--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -5,7 +5,8 @@
     </head>
     <body>
         <h1>Meet Liston Jackson</h1>
-        <p> I'm Liston a 1Y MBA</p>
+        <p> I'm Liston a 1Y MBA, check out my <a href="http://linkedin.com/in/liston-jackson">Linkedin Page</a></p>
         <p> I live in Chicago with my wife and rescue pup</p>
+        <img src="Lolly.jpg">
     </body>
 </html>
