--- a/homework/index.html
+++ b/homework/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        h1>Welcome to Liston's Pizza!</h1>
+        <h1>Welcome to Liston's Pizza!</h1>
     </head>
     <body>    
         <p>Remember folks, <em>Real Chicagoans don't eat deep dish!</em></p>
+        <img src="pizza-unsplash.jpg">
         <p>Ready to Order?</p>
         <p>Start with  <a href="products.html">Products Page</a> to see what we have available today</p>
         <p>Then choose from our many <a href="ingredients.html"> Ingredients</a> to finalize you order</p>
